# Lab

./: README.md
c_to_python/: build_pytorch.sh
c_to_python/demo_PyModule/: add.c  setup.py  test.py
c_to_python/demo_compile/: CMakeLists.txt  build.sh  setup_cmake.py
c_to_python/demo_logger/: logger.cpp  logger.h  python_log.py
c_to_python/demo_logger/thread_safe/: log_thread_safe.cpp
c_to_python/demo_pybind11/: CMakeLists.txt  add.cu  build.sh  test.py
c_to_python/demo_pycuda/: cupy_demo.py  kernel.cu  test.py
c_to_python/demo_torch_boxed_func/: dict_test.cpp  setup.py  test.py
c_to_python/demo_torch_boxed_func2/: Readme.md
c_to_python/demo_torch_boxed_func2/consumer/: consumer.cpp  setup.py  test.py
c_to_python/demo_torch_boxed_func2/producer/: producer.cpp  setup.py
c_to_python/demo_torch_dispatcher/: scale_mul.cpp  setup.py  test.py
c_to_python/demo_torch_dispatcher2/: run.sh  setup.py  test.py
c_to_python/demo_torch_dispatcher2/custom_linear/: linear.h  linear_cpu.cpp  linear_cuda.cu  register.cpp
c_to_python/demo_torch_load_library/: avx_add.py  torch_custom_op.py  torch_library.py
c_to_python/demo_torch_load_library/src/: avx_add.cpp  cuda_add.cu
c_to_python/demo_torch_normal/: README.md  binding.cpp  compare_normal.py  kernel.cu  lookup_seed.py  run_test.py  setup.py
experiments/AFP/: ReadMe.md  afp_bindings.cpp  afp_multi.py  build.sh  multi_afp_convert.cu  run_multi_afp.py
experiments/amax/: amax.cu  amax.py
experiments/combination/: combination.cu  pack.cu
experiments/csrc_gru/: check_files.py  draw_grad_img.py  fused_gru.cpp  get_gru_grad.py  gru.py  remove.py  setup.py  test_gru.py
experiments/dlpack/: demo  dlpack.c
experiments/mean/: binding.cpp  kernel.cu  perfomance.py  setup.py  test.py
experiments/mixin/: README.md  apply_cpu.cpp  apply_gpu.cu  mixin_demo.cpp  mixin_demo2.cpp  mixin_expand.cpp  tloops.cu
nvidia/cublaslt/: blas_gemm.cpp  blas_gemm.h  inline_check.h  workspace.h
nvidia/cudnn/: README.md  conv2d_backend.cu  conv2d_frontend.cu  conv2d_legacy.cu  conv2d_tansposed_frontend.cu
